frontend/public/css/App.css
/* Color Scheme:
    #CAEBF2 - Blue
    #A9A9A9 - Carbon
    #FF3B3F - Watermelon
    #EFEFEF - Neutral gray
  */

* {
  margin: 0;
  font-family: 'Roboto', sans-serif;
}

.logo {
  width: 75px;
  height: 75px;
  position: sticky;
}

/* http://www.designlovefest.com/wp-content/plugins/download-monitor/download.php?id=93 possible other background */

body {
  background-image: url("http://www.designlovefest.com/wp-content/plugins/download-monitor/download.php?id=93");
  min-height: 850px;
    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: repeat;
    background-size: auto;
}

.main-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.home-container {
    display: flex;
    flex-direction: column;
    align-content: center;
    width: 100%;
    padding: 15px;
}

.jumbotron {
    justify-content: space-around;
    border-radius: 4px;
    background-color: #CAEBF2;
    text-align: left;
    margin-top: 7%;
    padding: 15px;
}

.jumbo-button {
    border: 2px hidden black;
    border-radius: 4px;
    padding: 10px;
    background-color: #FF3B3F;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
    color: black;
    font-family: 'Permanent Marker', cursive;
    font-family: 'Righteous', cursive;
}

.jumbo-button:hover {
    background-color: #e53538;
    color: #EFEFEF;
    padding: 10px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
}

.jumbotron > .home-list {
    list-style: initial;
}

.navbar-default {
    background-color: #c2edf4;
    overflow: hidden;
    position: fixed;
    top: 0;
    width: 100%;
    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.2);
    border-color: #e6e4d3;
}

.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
    margin-bottom: 15px;
    padding: inherit;
}

.panel-success>.panel-heading {
    color: #A9A9A9;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}

.vendorResults {
    align-content: center;
    padding: 0, 15px, 0, 15px;
    width: 700, height: 450, overflowY: 'auto',;
    background-color: white;
    border-radius: 25px;
    border: 2px solid #FF3B3F;
    padding: 20px;
    width: 300px;
    height: 450px;
    box-shadow: 0 4px 15px 0 rgba(0,0,0,0.7);
}

#labels {
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin-top: 2%;
}

#features {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
}

.feat-list {
    display: flex;
    justify-content: center;
    width: 50%;
    height: auto;
}

.feat-list > img {
    width: 400px;
    height: 270px;
    padding: 15px;
    background-color: #CAEBF2;
    width: 350px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    text-align: center;
}

.feat-vendor {
    display: flex;
    justify-content: center;
    width: 50%;
    height: auto;
}

.feat-vendor > img {
    width: 400px;
    height: 270px;
    padding: 15px;
    background-color: #CAEBF2;
    width: 350px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    text-align: center;
}

.form-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
}

form {
    border: 2px solid #D3D3D3;
    border-radius: 4px;
    background-color: #D3D3D3;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    padding: 10px;
    width: 50%;
}

.form-input {
    margin: 15px;
}

.form-input.has-error > input {
    border: 2px solid #dc0005;
    background-color: #ffbec0;
}

.help-block {
    color: #dc0005;
    text-align: center;
}

.button {
    display: flex;
    justify-content: flex-start;
    align-content: center;
    padding: 5px;
}

#submit {
	width: 50%;
    border: 2px hidden;
    border-radius: 4px;
    padding: 2px 5px 2px 5px;
    background-color: #FF3B3F;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    color: black;
}

#submit:hover {
    background-color: #e53538;
    color: white;
}

.progress-bar {
    float: left;
    width: 0;
    height: inherit;
    font-size: 12px;
    color: #fff;
    text-align: center;
    background-color: #848FC0;
    -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
    box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
    -webkit-transition: width .6s ease;
    -o-transition: width .6s ease;
    transition: width .6s ease;
}

.panel-success>.panel-heading {
    color: #000;
    background-color: #CAEBF2;
    border-color: #CAEBF2;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    padding: 10px;

}

.panel-success>.panel-heading+.panel-collapse>.panel-body {
    border-top-color: #000;
    background-color: #EFEFEF;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
    padding: 10px;
}

input {
    padding: 5px;
    width: 100%;
    border: 1px inset;
    border-radius: 4px;
}

input[type=text]:focus {
    background-color: #EFEFEF;
}


h4, h1 {
    font-size: 20px;
    font-family: 'Permanent Marker', cursive;
    font-family: 'Righteous', cursive;
    color: #2e4053;
    text-shadow: 2px 5px 18px #EFEFEF;
}

h2 {
    font-size: 50px;
    text-align: center;
    color: #2e4053;
    padding-top: 15px;
}

h5 {
  text-align: center;
  color: #2e4053;
  padding-top: 5px;
}

label {
    padding: 0;
    margin: 0;
}

ul {
    list-style: none;
}

h3 {
    padding: 10px;
}

p, li {
  font-family: 'Permanent Marker', cursive;
  font-family: 'Righteous', cursive;
  font-size: 15px;
  padding: auto;
  margin: auto;
}

.footer {
  width: 100%;
}


{/* ----Tasks & TodoInput & tasksDash Component */}

.todo-input-form {
	width: 200%;
	margin-right: 25px;
}

.task-list-subheader > img {
  width: 50px;
  height: 50px;
  padding: 5px;
}

#remove-task-btn {
  float:right
}


.edit-btn {
  float: right;
  padding: 5px;
  margin-right: 15px;
}

